# kotlin

./: build.gradle.kts  find_single_file_hash.sh  findaar.sh  gradle.properties  kotlin.docx  settings.gradle  settings.gradle.kts
analysis/: build.gradle.kts
compiler/testData/cli/jvm/: reportPerfWithConfigError.out  werror.out  werrorWithNoWarn.out  werrorWithStrongWarning.out
gradle/: libs.versions.toml  verification-metadata.xml
gradle/wrapper/: gradle-wrapper.properties
kotlin-native/: build.gradle  gradle.properties
kotlin-native/Interop/Runtime/: build.gradle.kts
kotlin-native/backend.native/tests/samples/uikit/: build.gradle.kts
kotlin-native/backend.native/tests/samples/watchos/: build.gradle.kts
kotlin-native/build-tools/: build.gradle.kts
kotlin-native/common/files/src/main/cpp/: Files.cpp
kotlin-native/common/files/src/main/headers/: Files.h
kotlin-native/dependencies/: build.gradle.kts
kotlin-native/konan/: konan.properties
kotlin-native/libclangInterop/: build.gradle.kts
kotlin-native/libclangext/: build.gradle.kts
kotlin-native/libclangext/src/main/cpp/: ClangExt.cpp
kotlin-native/libllvmext/: build.gradle.kts
kotlin-native/libllvmext/src/main/cpp/: CAPIExtensions.cpp  PassesProfileHandler.cpp
kotlin-native/libllvmext/src/main/cpp/Passes/: HideSymbols.cpp  HideSymbols.h
kotlin-native/llvmDebugInfoC/: build.gradle.kts
kotlin-native/llvmDebugInfoC/src/main/cpp/: DebugInfoC.cpp
kotlin-native/llvmInterop/: build.gradle.kts  llvm.def
kotlin-native/performance/buildSrc/: build.gradle.kts
kotlin-native/platformLibs/: build.gradle.kts
kotlin-native/platformLibs/src/platform/ios/: posix.def
kotlin-native/platformLibs/src/platform/ohos/: basic.def  devices.def  drm.def  framework.def  gles3.def  gles32.def  linux.def  mtd.def  multimedia.def  native.def  ohos.def  posix.def  rawfile.def  sles.def  sound.def  video.def
kotlin-native/platformLibs/src/platform/osx/: posix.def
kotlin-native/platformLibs/src/platform/tvos/: posix.def
kotlin-native/platformLibs/src/platform/watchos/: MediaPlayer.def  ShazamKit.def  posix.def
kotlin-native/runtime/: CMakeLists.txt  build.gradle.kts
kotlin-native/runtime/src/launcher/cpp/: ohosLauncher.cpp
kotlin-native/runtime/src/main/cpp/: KotlinMath.cpp  MemoryUsageInfo.cpp  Porting.cpp  Random.cpp  Runtime.cpp
kotlin-native/runtime/targets/ohos/: CMakeLists.txt
kotlin-native/tools/benchmarksAnalyzer/buildSrc/: build.gradle.kts
kotlin-native/utilities/cli-runner/: build.gradle.kts
libraries/stdlib/src/kotlin/util/: KotlinVersion.kt
libraries/tools/kotlin-gradle-plugin-api/api/: kotlin-gradle-plugin-api.api
libraries/tools/kotlin-gradle-plugin-idea/: build.gradle.kts
libraries/tools/kotlin-stdlib-docs/gradle/wrapper/: gradle-wrapper.properties
native/cli-native/: build.gradle.kts
native/executors/: build.gradle.kts
native/kotlin-test-native-xctest/: build.gradle.kts
native/utils/: build.gradle.kts
plugins/compose/compiler-hosted/integration-tests/: build.gradle.kts
plugins/compose/compiler-hosted/runtime-test-utils/: build.gradle.kts
plugins/compose/compiler-hosted/runtime-tests/: build.gradle.kts
repo/gradle-build-conventions/buildsrc-compat/src/main/kotlin/: CommonUtil.kt  SmartJavaExec.kt  (+1 more)
repo/gradle-build-conventions/prepare-deps/: build.gradle.kts
repo/gradle-settings-conventions/: settings.gradle.kts
repo/gradle-settings-conventions/kotlin-daemon-config/: build.gradle.kts
(+113 files in other folders)
